public/analytics-pro/v0.9.0rc5/_sources/reference/tmlt/analytics/no_privacy_session/index.rst.txt

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*************************
no_privacy_session
*************************

.. py:module:: tmlt.analytics.no_privacy_session

.. autoapi-nested-parse::

   |PRO| Interactive query evaluation without any privacy guarantees.

   :class:`NoPrivacySession` can be used to evaluate queries **without
   applying differential privacy mechanisms** while using the same syntax as the
   :class:`~.session.Session`. It is primarily meant to be used by
   :class:`~.tuner.SessionProgramTuner` to compute baselines and error metrics for tuning
   :class:`~.SessionProgram`\ s; in most cases, using the SessionProgramTuner (instead of
   using a :class:`NoPrivacySession` directly) is a better choice.

   A :class:`NoPrivacySession` is initialized in the same way as a
   :class:`~tmlt.analytics.session.Session`, but evaluates queries without adding
   noise, and can also disable the enforcement of various constraints and truncations which
   are normally applied to private queries. If desired, the enforcement of these
   constraints can be enabled. See :class:`~.Options` for more information.











Classes
=======

.. list-table::

   * - :class:`.NoPrivacySession`
     - Allows non-private query evaluation on data.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NoPrivacySession(accountant, public_sources, session_data, options)

   Bases: :class:`tmlt.analytics.session.Session`

   Allows non-private query evaluation on data.

   .. note::

       |PRO_NOTE|

   NoPrivacySessions should not be directly constructed. Instead, they should be
   created using :meth:`from_dataframe` or with a :class:`Builder`.



   .. list-table:: Classes

      * - :class:`.Builder`
        - Builder for :class:`NoPrivacySession`.
      * - :class:`.Options`
        - Configures the query evaluation behavior of a NoPrivacySession.

   .. list-table:: Methods

      * - :meth:`.from_dataframe`
        - Initializes a NoPrivacySession from a Spark DataFrame.
      * - :meth:`.evaluate`
        - Answers a query with no privacy guarantees, returning a Spark DataFrame.
      * - :meth:`.create_view`
        - Creates a new view from a transformation and possibly cache it.
      * - :meth:`.delete_view`
        - Deletes a view and decaches it if it was cached.
      * - :meth:`.partition_and_create`
        - Returns new NoPrivacySessions for each partition.
      * - :meth:`.options`
        - Returns the query evaluation options for this NoPrivacySession.
      * - :meth:`.private_sources`
        - Returns the IDs of the private sources.
      * - :meth:`.public_sources`
        - Returns the IDs of the public sources.
      * - :meth:`.public_source_dataframes`
        - Returns a dictionary of public source DataFrames.
      * - :meth:`.remaining_privacy_budget`
        - Returns the remaining privacy_budget left in the session.
      * - :meth:`.describe`
        - Describes this session, or one of its tables, or the result of a query.
      * - :meth:`.get_schema`
        - Returns the schema for any data source.
      * - :meth:`.get_column_types`
        - Returns the column types for any data source.
      * - :meth:`.get_grouping_column`
        - Returns an optional column that must be grouped by in this query.
      * - :meth:`.get_id_column`
        - Returns the ID column of a table, if it has one.
      * - :meth:`.get_id_space`
        - Returns the ID space of a table, if it has one.
      * - :meth:`.add_public_dataframe`
        - Adds a public data source to the session.
      * - :meth:`.stop`
        - Closes out this session, allowing other sessions to become active.


   
   ..
       SPDX-License-Identifier: CC-BY-SA-4.0
       Copyright Tumult Labs 2024
   .. py:class:: Builder

      Bases: :class:`tmlt.analytics.session.Session.Builder`

      Builder for :class:`NoPrivacySession`.






      .. py:method:: with_privacy_budget(privacy_budget)

         Sets the privacy budget applied to this NoPrivacySession.

         Privacy budget accounting works in the same way as in
         :class:~.session.Session`\ : it gets “spent” in the same way, and query
         evaluation stops when none is left, even though the NoPrivacySession
         does not provide any privacy guarantee (so the actual privacy budget is
         infinite). This is to ensure compatibility with programs that rely on
         privacy budget accounting behavior.


      .. py:method:: build()

         Builds Session with specified configuration.


      .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

         Adds a Spark DataFrame as a private source.

         Not all Spark column types are supported in private sources; see
         :data:`tmlt.analytics.session.SUPPORTED_SPARK_TYPES` for information about
         which types are supported.

         :param source_id: Source id for the private source dataframe.
         :param dataframe: Private source dataframe to perform queries on,
                           corresponding to the ``source_id``.
         :param protected_change: A
                                  :class:`~tmlt.analytics.protected_change.ProtectedChange`
                                  specifying what changes to the input data should be protected.


      .. py:method:: with_public_dataframe(source_id, dataframe)

         Adds a public dataframe.


      .. py:method:: with_id_space(id_space)

         Adds an identifier space.

         This defines a space of identifiers that map 1-to-1 to the identifiers
         being protected by a table with the :class:`~.AddRowsWithID` protected
         change. Any table with such a protected change must be a member of some
         identifier space.



   
   ..
       SPDX-License-Identifier: CC-BY-SA-4.0
       Copyright Tumult Labs 2024
   .. py:class:: Options(enforce_keysets = False, enforce_clamping_bounds = False, enforce_constraints = False, enforce_flat_map_truncation = False, enforce_private_join_truncation = False)

      Configures the query evaluation behavior of a NoPrivacySession.

      All enforcement properties default to False when the NoPrivacySession is
      created. This means that, by default, the NoPrivacySession will ignore keysets,
      clamping bounds, constraints, and other truncations that are specified in
      queries.

      If you need to use different settings in different parts of your code, you can
      change properties between calls to evaluate or create_view.

      .. rubric:: Example

      ..
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_builder import QueryBuilder
          >>> # Get data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> spark_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]],
          ...         columns=["A", "B", "X"],
          ...     )
          ... )

      >>> spark_data.toPandas()
         A  B  X
      0  0  1  0
      1  1  0  1
      2  1  2  1
      >>> # Set up session
      >>> sess = NoPrivacySession.from_dataframe(
      ...     privacy_budget=PureDPBudget(3),
      ...     source_id="my_private_data",
      ...     dataframe=spark_data,
      ...     protected_change=AddOneRow(),
      ... )
      >>> # By default enforce_keysets is False
      >>> sess.options.enforce_keysets
      False
      >>> keyset = KeySet.from_dict({"A": ["0", "2"]})
      >>> sess.evaluate(
      ...     QueryBuilder("my_private_data").groupby(keyset).count(),
      ...     PureDPBudget(1),
      ... ).toPandas()
         A  count
      0  0      1
      1  1      2
      >>> sess.options.enforce_keysets = True
      >>> sess.evaluate(
      ...     QueryBuilder("my_private_data").groupby(keyset).count(),
      ...     PureDPBudget(1),
      ... ).toPandas()
         A  count
      0  0      1
      1  2      0
      >>> # You can change options in the middle of your program
      >>> sess.options.enforce_keysets = False
      >>> sess.evaluate(
      ...     QueryBuilder("my_private_data").groupby(keyset).count(),
      ...     PureDPBudget(1),
      ... ).toPandas()
         A  count
      0  0      1
      1  1      2






      .. automethod:: __init__
      .. py:method:: enforce_keysets()
         :property:

         If False, will use private data instead of keysets.

         This option affects:
          - :meth:`~tmlt.analytics.query_builder.QueryBuilder.groupby`
             - Doesn't use the `keys` parameter, and also won't use a differentially
               private mechanism to generate a keyset if `keys` aren't provided.

         Defaults to False.


      .. py:method:: enforce_clamping_bounds()
         :property:

         If False, won't use clamping bounds in aggregations.

         This option affects:
          - all aggregations with `low` and `high` parameters
             - This includes
                 - :meth:`~.QueryBuilder.quantile`
                 - :meth:`~.QueryBuilder.sum`
                 - ...

         Defaults to False.


      .. py:method:: enforce_constraints()
         :property:

         If False, won't enforce constraints provided by the user.

         This option affects:
          - :meth:`~tmlt.analytics.query_builder.QueryBuilder.enforce`
             - Doesn't apply the constraint to the private data. Note that enforce
               still must be called with the required constraints to avoid the same
               errors as in a private session.

         Defaults to False.


      .. py:method:: enforce_flat_map_truncation()
         :property:

         If False, won't use truncation in flat map queries.

         This option affects:
           - :meth:`~tmlt.analytics.query_builder.QueryBuilder.flat_map`
              - Doesn't use the `max_rows` parameter.

         Defaults to False.


      .. py:method:: enforce_private_join_truncation()
         :property:

         If False, won't use truncation in private joins.

         This option affects:
             - :meth:`~tmlt.analytics.query_builder.QueryBuilder.join_private`
                - Doesn't use the `truncation_strategy_left` and
                  `truncation_strategy_right` parameters.

         Defaults to False.


      .. py:method:: __eq__(other)

         Returns whether this object is equal to another object.





   .. automethod:: __init__
   .. py:method:: from_dataframe(privacy_budget, source_id, dataframe, protected_change)
      :classmethod:

      Initializes a NoPrivacySession from a Spark DataFrame.

      Only one data source is supported with this initialization
      method; if you need multiple data sources, use
      :class:`NoPrivacySession.Builder`.

      Not all Spark column types are supported in sources; see
      :data:`~.session.SUPPORTED_SPARK_TYPES` for information about which types are
      supported.

      ..
          >>> # Set up data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> spark_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )

      .. rubric:: Example

      >>> spark_data.toPandas()
         A  B  X
      0  0  1  0
      1  1  0  1
      2  1  2  1
      >>> # Declare budget for the session.
      >>> session_budget = PureDPBudget(1)
      >>> # Set up Session
      >>> sess = NoPrivacySession.from_dataframe(
      ...     privacy_budget=session_budget,
      ...     source_id="my_private_data",
      ...     dataframe=spark_data,
      ...     protected_change=AddOneRow(),
      ... )
      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}

      :param privacy_budget: The privacy budget for the session. If a non-infinite budget is provided, it
                             will be replaced with an infinite budget of the same type.
      :param source_id: The source ID for the source DataFrame.
      :param dataframe: The source DataFrame to perform queries on,
                        corresponding to the `source_id`.
      :param protected_change: A
                               :class:`~tmlt.analytics.protected_change.ProtectedChange`
                               specifying what changes to the input data the resulting
                               :class:`NoPrivacySession` should protect.


   .. py:method:: evaluate(query_expr, privacy_budget)

      Answers a query with no privacy guarantees, returning a Spark DataFrame.

      The type of privacy budget that you use must match the type your Session was
      initialized with (i.e., you cannot evaluate a query using RhoZCDPBudget if
      the Session was initialized with a PureDPBudget, and vice versa).

      ..
          >>> from tmlt.analytics.keyset import KeySet
          >>> from tmlt.analytics.query_builder import QueryBuilder
          >>> # Get data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> # Create NoPrivacySession
          >>> sess = NoPrivacySession.from_dataframe(
          ...     privacy_budget=PureDPBudget(1),
          ...     source_id="my_private_data",
          ...     dataframe=data,
          ...     protected_change=AddOneRow(),
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> sess.remaining_privacy_budget
      PureDPBudget(epsilon=1)
      >>> # Evaluate Queries
      >>> filter_query = QueryBuilder("my_private_data").filter("A > 0")
      >>> count_query = filter_query.groupby(KeySet.from_dict({"X": [0, 1]})).count()
      >>> count_answer = sess.evaluate(
      ...     query_expr=count_query,
      ...     privacy_budget=PureDPBudget(0.5),
      ... )
      >>> sum_query = filter_query.sum(column="B", low=0, high=1)
      >>> sum_answer = sess.evaluate(
      ...     query_expr=sum_query,
      ...     privacy_budget=PureDPBudget(0.5),
      ... )
      >>> count_answer # TODO(#798): Seed randomness and change to toPandas()
      DataFrame[X: bigint, count: bigint]
      >>> sum_answer # TODO(#798): Seed randomness and change to toPandas()
      DataFrame[B_sum: bigint]

      :param query_expr: One query expression to answer.
      :param privacy_budget: The privacy budget used for the query.


   .. py:method:: create_view(query_expr, source_id, cache)

      Creates a new view from a transformation and possibly cache it.

      ..
          >>> # Get data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> public_spark_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 0], ["0", 1], ["1", 1], ["1", 2]], columns=["A", "C"]
          ...     )
          ... )
          >>> # Create Session
          >>> sess = Session.from_dataframe(
          ...     privacy_budget=PureDPBudget(1),
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ...     protected_change=AddOneRow(),
          ... )

      .. rubric:: Example

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> public_spark_data.toPandas()
         A  C
      0  0  0
      1  0  1
      2  1  1
      3  1  2
      >>> sess.add_public_dataframe("my_public_data", public_spark_data)
      >>> # Create a view
      >>> join_query = (
      ...     QueryBuilder("my_private_data")
      ...     .join_public("my_public_data")
      ...     .select(["A", "B", "C"])
      ... )
      >>> sess.create_view(
      ...     join_query,
      ...     source_id="private_public_join",
      ...     cache=True
      ... )
      >>> sess.private_sources
      ['private_public_join', 'my_private_data']
      >>> sess.get_schema("private_public_join").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'C': 'INTEGER'}
      >>> # Delete the view
      >>> sess.delete_view("private_public_join")
      >>> sess.private_sources
      ['my_private_data']

      :param query_expr: A query that performs a transformation.
      :param source_id: The name, or unique identifier, of the view.
      :param cache: Whether or not to cache the view.


   .. py:method:: delete_view(source_id)

      Deletes a view and decaches it if it was cached.

      :param source_id: The name of the view.


   .. py:method:: partition_and_create(source_id, privacy_budget, column, splits)

      Returns new NoPrivacySessions for each partition.

      This works the same way as :meth:`~.session.Session.partition_and_create`, but
      returns NoPrivacySessions instead of Sessions. The states and returned budgets
      of all of the sessions will be related correctly.

      ..
          >>> # Get data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> # Create Session
          >>> sess = NoPrivacySession.from_dataframe(
          ...     privacy_budget=PureDPBudget(1),
          ...     source_id="my_private_data",
          ...     dataframe=data,
          ...     protected_change=AddOneRow(),
          ... )
          >>> import doctest
          >>> doctest.ELLIPSIS_MARKER = '...'

      .. rubric:: Example

      This example partitions the session into two sessions, one with A = "0" and
      one with A = "1". Due to parallel composition, each of these sessions are
      given the same budget, while only one count of that budget is deducted from
      session.

      Unlike :meth:`~.session.Session.partition_and_create`, the new sessions are
      of type :class:`~.NoPrivacySession`, and so the result of the count query
      is exact.

      >>> sess.private_sources
      ['my_private_data']
      >>> sess.get_schema("my_private_data").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> sess.remaining_privacy_budget
      PureDPBudget(epsilon=1)
      >>> # Partition the Session
      >>> new_sessions = sess.partition_and_create(
      ...     "my_private_data",
      ...     privacy_budget=PureDPBudget(0.75),
      ...     column="A",
      ...     splits={"part0":"0", "part1":"1"}
      ... )
      >>> sess.remaining_privacy_budget
      PureDPBudget(epsilon=0.25)
      >>> # The new sessions are NoPrivacySessions
      >>> isinstance(new_sessions["part0"], NoPrivacySession)
      True
      >>> new_sessions["part0"].private_sources
      ['part0']
      >>> new_sessions["part0"].get_schema("part0").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> new_sessions["part0"].remaining_privacy_budget
      PureDPBudget(epsilon=0.75)
      >>> new_sessions["part1"].private_sources
      ['part1']
      >>> new_sessions["part1"].get_schema("part1").column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'B': 'INTEGER', 'X': 'INTEGER'}
      >>> new_sessions["part1"].remaining_privacy_budget
      PureDPBudget(epsilon=0.75)

      When you are done with a new session, you can use the
      :meth:`NoPrivacySession.stop` method to allow the next one to become
      active:

      >>> new_sessions["part0"].stop()
      >>> new_sessions["part1"].private_sources
      ['part1']
      >>> count_query = QueryBuilder("part1").count()
      >>> count_answer = new_sessions["part1"].evaluate(
      ...     count_query,
      ...     PureDPBudget(0.75),
      ... )

      >>> # The result is exact, because new_sessions["part1"] is a NoPrivacySession
      >>> count_answer.toPandas() # doctest: +NORMALIZE_WHITESPACE, +ELLIPSIS
         count
      0    2

      :param source_id: The private source to partition.
      :param privacy_budget: Amount of privacy budget to pass to each new session.
      :param column: The name of the column partitioning on.
      :param splits: Mapping of split name to value of partition.
                     Split name is ``source_id`` in new session.


   .. py:method:: options()
      :property:

      Returns the query evaluation options for this NoPrivacySession.


   .. py:method:: private_sources()
      :property:

      Returns the IDs of the private sources.


   .. py:method:: public_sources()
      :property:

      Returns the IDs of the public sources.


   .. py:method:: public_source_dataframes()
      :property:

      Returns a dictionary of public source DataFrames.


   .. py:method:: remaining_privacy_budget()
      :property:

      Returns the remaining privacy_budget left in the session.

      The type of the budget (e.g., PureDP or rho-zCDP) will be the same as
      the type of the budget the Session was initialized with.


   .. py:method:: describe(obj = None)

      Describes this session, or one of its tables, or the result of a query.

      If ``obj`` is not specified, ``session.describe()`` will describe the
      Session and all of the tables it contains.

      If ``obj`` is a :class:`~tmlt.analytics.query_builder.QueryBuilder` or
      :class:`~tmlt.analytics.query_expr.QueryExpr`, ``session.describe(obj)``
      will describe the table that would result from that query if it were
      applied to the Session.

      If ``obj`` is a string, ``session.describe(obj)`` will describe the table
      with that name. This is a shorthand for
      ``session.describe(QueryBuilder(obj))``.

      ..
          >>> # Set up data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> spark_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> # construct session
          >>> sess = Session.from_dataframe(
          ...     PureDPBudget(1),
          ...     "my_private_data",
          ...     spark_data,
          ...     protected_change=AddOneRow(),
          ... )

      .. rubric:: Examples

      >>> # describe a session, "sess"
      >>> sess.describe() # doctest: +NORMALIZE_WHITESPACE
      The session has a remaining privacy budget of PureDPBudget(epsilon=1).
      The following private tables are available:
      Table 'my_private_data' (no constraints):
          Columns:
              - 'A'  VARCHAR
              - 'B'  INTEGER
              - 'X'  INTEGER
      >>> # describe a query object
      >>> query = QueryBuilder("my_private_data").drop_null_and_nan(["B", "X"])
      >>> sess.describe(query) # doctest: +NORMALIZE_WHITESPACE
      Columns:
          - 'A'  VARCHAR
          - 'B'  INTEGER, not null
          - 'X'  INTEGER, not null
      >>> # describe a table by name
      >>> sess.describe("my_private_data") # doctest: +NORMALIZE_WHITESPACE
      Columns:
          - 'A'  VARCHAR
          - 'B'  INTEGER
          - 'X'  INTEGER

      :param obj: The table or query to be described, or None to describe the
                  whole Session.


   .. py:method:: get_schema(source_id)

      Returns the schema for any data source.

      This includes information on whether the columns are nullable.

      :param source_id: The ID for the data source whose column types
                        are being retrieved.


   .. py:method:: get_column_types(source_id)

      Returns the column types for any data source.

      This does *not* include information on whether the columns are nullable.


   .. py:method:: get_grouping_column(source_id)

      Returns an optional column that must be grouped by in this query.

      When a groupby aggregation is appended to any query on this table, it
      must include this column as a groupby column.

      :param source_id: The ID for the data source whose grouping column
                        is being retrieved.


   .. py:method:: get_id_column(source_id)

      Returns the ID column of a table, if it has one.

      :param source_id: The name of the table whose ID column is being retrieved.


   .. py:method:: get_id_space(source_id)

      Returns the ID space of a table, if it has one.

      :param source_id: The name of the table whose ID space is being retrieved.


   .. py:method:: add_public_dataframe(source_id, dataframe)

      Adds a public data source to the session.

      Not all Spark column types are supported in public sources; see
      :data:`~.session.SUPPORTED_SPARK_TYPES` for information about which types are
      supported.

      ..
          >>> # Get data
          >>> spark = SparkSession.builder.getOrCreate()
          >>> private_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 1, 0], ["1", 0, 1], ["1", 2, 1]], columns=["A", "B", "X"]
          ...     )
          ... )
          >>> public_spark_data = spark.createDataFrame(
          ...     pd.DataFrame(
          ...         [["0", 0], ["0", 1], ["1", 1], ["1", 2]], columns=["A", "C"]
          ...     )
          ... )
          >>> # Set up Session
          >>> sess = Session.from_dataframe(
          ...     privacy_budget=PureDPBudget(1),
          ...     source_id="my_private_data",
          ...     dataframe=private_data,
          ...     protected_change=AddOneRow(),
          ... )

      .. rubric:: Example

      >>> public_spark_data.toPandas()
         A  C
      0  0  0
      1  0  1
      2  1  1
      3  1  2
      >>> # Add public data
      >>> sess.add_public_dataframe(
      ...     source_id="my_public_data", dataframe=public_spark_data
      ... )
      >>> sess.public_sources
      ['my_public_data']
      >>> sess.get_schema('my_public_data').column_types # doctest: +NORMALIZE_WHITESPACE
      {'A': 'VARCHAR', 'C': 'INTEGER'}

      :param source_id: The name of the public data source.
      :param dataframe: The public data source corresponding to the ``source_id``.


   .. py:method:: stop()

      Closes out this session, allowing other sessions to become active.







